2008-07-17  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.4

2008-07-17  Will Cohen  <wcohen@redhat.com>

	* libop/op_alloc_counter.c: Assume perfmon managing PMU hw
	  when no counters

2008-07-07  Maynard Johnson  <maynardj@us.ibm.com>

	* HACKING: Ask contributors to include Signed-off-by
	  line with their patches

2008-07-03  Richard Purdie  <rpurdie@openedhand.com>

	* libutil++/bfd_support.cpp:
	* libutil++/bfd_support.h:
	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* libutil++/op_spu_bfd.cpp:
	* pp/oparchive.cpp: Switch separate_debug_file_exists()
	  and hence find_separate_debug_file() to use
	  extra_images::find_image_path() so debug files in --root
	  directories are correctly found

2008-07-03  Maynard Johnson  <maynardj@us.ibm.com>

	* ChangeLog:  Correct date of previous entry
	* README_PACKAGERS: Add more advice to packagers
	  regarding the new JIT support libraries

2008-07-03  Maynard Johnson <maynardj@us.ibm.com>

	* libopagent/Makefile.am:
	* libopagent/opagent.c:
	* remove libopagent/bfddefines.c: Move code from bfddefines
	  to libopagent to fix cross-compile error

2008-06-30  Shunichi Fuji  <palglowr@gmail.com>

	* libpp/callgraph_container.cpp: Fix compile warning
	  using gcc 4.3.1 for uninitialized variable

2008-06-23  Maynard Johnson <maynardj@us.ibm.com>

	* daemon/opd_stats.c: Do not force printing of sample_invalid_eip
	  since this is not available from pre-2.6.24 kernels

2008-06-23  Maynard Johnson <maynardj@us.ibm.com>

	* opjitconv/opjitconv.c: Switch to special user account
	  after determining whether or not we have JIT dump files
	  to process in order to avoid unnecessary error messages
	  in oprofiled.log

2008-06-11  Maynard Johnson <maynardj@us.ibm.com>

	* configure.in:
	* Makefile.am:
	* agents/Makefile.am:
	* doc/oprofile.xml: Change make install error to warning
	  if special user account does not exist

2008-06-11  Maynard Johnson <maynardj@us.ibm.com>
